xion-ios/XionDemo/Frameworks/libmob.xcframework/ios-arm64/Headers/mobFFI.h

uint16_t uniffi_mob_checksum_method_client_attach_signer(void
    
);
uint16_t uniffi_mob_checksum_method_client_execute_contract(void
    
);
uint16_t uniffi_mob_checksum_method_client_get_account(void
    
);
uint16_t uniffi_mob_checksum_method_client_get_all_balances(void
    
);
uint16_t uniffi_mob_checksum_method_client_get_balance(void
    
);
uint16_t uniffi_mob_checksum_method_client_get_chain_id(void
    
);
uint16_t uniffi_mob_checksum_method_client_get_height(void
    
);
uint16_t uniffi_mob_checksum_method_client_get_tx(void
    
);
uint16_t uniffi_mob_checksum_method_client_is_synced(void
    
);
uint16_t uniffi_mob_checksum_method_client_send(void
    
);
uint16_t uniffi_mob_checksum_method_signer_address(void
    
);
uint16_t uniffi_mob_checksum_method_signer_address_prefix(void
    
);
uint16_t uniffi_mob_checksum_method_signer_public_key_hex(void
    
);
uint16_t uniffi_mob_checksum_method_signer_sign_bytes(void
    
);
uint16_t uniffi_mob_checksum_constructor_client_new(void
    
);
uint16_t uniffi_mob_checksum_constructor_client_new_with_signer(void
    
);
uint16_t uniffi_mob_checksum_constructor_signer_from_mnemonic(void
    
);
uint32_t ffi_mob_uniffi_contract_version(void
    
);